# python-templates

./: LICENSE
app-conda/: README.md  environment.yml
app-conda/example_pkg/: main.py
app-poetry/: pyproject.toml
app-poetry/app_poetry/: main.py  mylib.py
app-venv-pip/: .gitignore  README.md  requirements-app.txt  requirements.txt
app-venv-pip/example_pkg/: main.py  mylib.py
vagrant-miniconda/: .gitignore  Vagrantfile  datascience-conda-env.yaml  download-miniconda.sh  install-miniconda.sh
