[tool.poetry]
name = "app-poetry"
version = "0.1.0"
description = ""
authors = ["Ross Coleman <rossco85@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-cov = "^2.8"
pylint = "^2.4"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
